# STL

./: README.md
Programming_Task_1/: CMakeLists.txt  ReadMe.md  clip.h  command.h  common.h  main.cpp  unittest.cpp
Testing_for_future/: CMakeLists.txt  adjacent_find.cpp  all_of.cpp  any_of.cpp  binary_search.cpp  clamp.cpp  copy.cpp  for_fun.cpp  string_test.cpp  testing.cpp  valarray_example.cpp
