cmake_minimum_required(VERSION 3.16.3)
project(Testing_for_future)

set(CMAKE_CXX_STANDARD 20)

add_executable(Testing_for_future
#        valarray_example.cpp
        for_fun.cpp
#        test.cpp
#        string_test.cpp
#        testing.cpp
#        binary_search.cpp
#        clamp.cpp
#        copy.cpp
        )
